# learning

./: .gitignore  README.rst
0001-practical-ocaml/: README.rst  common.mk
0001-practical-ocaml/ch05/: db.ml
0002-pastescript/: README.rst
0002-project-templating/: README.rst
0003-mega-project-list/: README.rst
0004-rust-tutorial/: README.rst  helloworld.rs
0006-rust-by-example/: array.rs  borrow.rs  expression.rs  fifo.rs  for.rs  hof.rs  lifetime.rs  methods.rs  move.rs  structs.rs  tasks.rs  timers.rs  trait.rs  tuples.rs  unit-test.rs  while.rs
0007-tour-of-git/: equivalentbinarytrees.go  handlers.go  image.go  rot13.go  wiki.go
0007-tour-of-go/: edit.html  webcrawler.go  wiki.go
0008-99-problems-in-ocaml/: README.rst  lists.ml
0009-learn-you-some-erlang/: Makefile  calc.erl  cases.erl  dolphins.erl  exceptions.erl  hhfuns.erl  kitchen.erl  linkmon.erl  multiproc.erl  records.erl  records.hrl  recursive.erl  road.erl  tree.erl  useless.erl  what_the_if.erl
0015-real-world-ocaml/: README.md
0016-lua-reference/: README.rst  account.lua  all_words.lua  allwords.lua  complex.lua  complex_iter.lua  coro_iter.lua  coroutines.lua  counter.lua  global_declaration.lua  iter.lua  markov.lua  maze.lua  maze_table.lua  packages.lua  plot.lua  producer_consumer.lua  queues.lua  read_only_table.lua  serialisation.lua  sets.lua  sort_grades.lua  stateless_iter.lua  string_buffer.lua  table_access.lua  true_iter.lua
0019-real-world-haskell/: clean.sh
0019-real-world-haskell/ch05/: PrettyJSON.hs  SimpleJSON.hs  eqclasses.hs  mypretty.cabal
(+209 files in other folders)
