Cabal-Version:  >= 1.2
Name:           mypretty
Version:        0.1.0
Synopsis:       My pretty-printing library, with JSON support
Description:
  A simple pretty-printing library that illustrates how to
  develop a Haskell library.
Author:         Real World Haskell
Maintainer:     nobody@realworldhaskell.org

library
    Exposed-Modules:  PrettyJSON
                      SimpleJSON
    Build-Depends:    base >= 2.0
